@@ -1,16 +1,18 @@
 package com.project.HRM.ServiceImpl;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.stereotype.Service;
 
 import com.project.HRM.Entity.User;
 import com.project.HRM.Repository.UserRepository;
 
+@Service
 public class MyUserDetailsService implements UserDetailsService{
 	
 	@Autowired
@@ -18,15 +20,15 @@ public class MyUserDetailsService implements UserDetailsService{
 
 
 	@Override
-	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + username));
+	public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+		 User user = userRepository.findByEmail(email)
+                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
-            return new org.springframework.security.core.userdetails.User(
-                user.getEmail(),
-                user.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority(user.getRole().getRole()))
-            );
+     return new org.springframework.security.core.userdetails.User(
+             user.getEmail(),
+             user.getPassword(),
+             List.of(new SimpleGrantedAuthority(user.getRole().getRole()))
+     );
 
 	}
 
